title in one line

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SwankyTools™ AI Builder</title>
-		<meta name="description" content="Ship your app from idea to v1!" />
+		<meta name="description" content="Ship your app from idea to MicroSAAS Tools!" />
 	</head>
 	<body>
 		<div id="root"></div>
